pkg/kgateway/agentgatewaysyncer/testdata/outputs/grpc-routing/basic-proxy.yaml
Addresses:
- service:
    hostname: example-grpc-svc.default.svc.cluster.local
    name: example-grpc-svc
    namespace: default
    ports:
    - appProtocol: HTTP2
      servicePort: 9000
      targetPort: 9000
Binds:
- key: 8090/default/example-gateway
  port: 8090
Listeners:
- bindKey: 8090/default/example-gateway
  key: default/example-gateway.grpc
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: grpc
  protocol: HTTP
Routes:
- backends:
  - backend:
      port: 9000
      service:
        hostname: example-grpc-svc.default.svc.cluster.local
        namespace: default
    weight: 1
  key: default/example-grpc-route.0.grpc
  listenerKey: default/example-gateway.grpc
  matches:
  - path:
      exact: /example.grpc.Service/ExampleMethod
  name:
    kind: GRPCRoute
    name: example-grpc-route
    namespace: default
