pkg/kgateway/agentgatewaysyncer/testdata/outputs/grpc-routing/invalid-backend.yaml
Binds:
- key: 8090/default/example-gateway
  port: 8090
Listeners:
- bindKey: 8090/default/example-gateway
  key: default/example-gateway.grpc
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: grpc
  protocol: HTTP
Routes:
- backends:
  - {}
  key: default/example-grpc-route.0.grpc
  listenerKey: default/example-gateway.grpc
  matches:
  - path:
      exact: /example.grpc.Service/ExampleMethod
  name:
    kind: GRPCRoute
    name: example-grpc-route
    namespace: default
