pkg/kgateway/agentgatewaysyncer/testdata/outputs/grpc-routing/multi-backend-proxy.status.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: example-grpc-multi-backend-route
  namespace: default
spec: null
status:
  parents:
  - conditions:
    - lastTransitionTime: fake
      message: ""
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: ""
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: agentgateway.dev/agentgateway
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: example-grpc-gateway
      namespace: default
---
