pkg/kgateway/agentgatewaysyncer/testdata/outputs/grpc-routing/multi-backend-proxy.yaml
Addresses:
- service:
    hostname: grpc-svc-1.default.svc.cluster.local
    name: grpc-svc-1
    namespace: default
    ports:
    - appProtocol: HTTP2
      servicePort: 9001
      targetPort: 9001
- service:
    hostname: grpc-svc-2.default.svc.cluster.local
    name: grpc-svc-2
    namespace: default
    ports:
    - appProtocol: HTTP2
      servicePort: 9002
      targetPort: 9002
Binds:
- key: 8090/default/example-grpc-gateway
  port: 8090
Listeners:
- bindKey: 8090/default/example-grpc-gateway
  key: default/example-grpc-gateway.grpc
  name:
    gatewayName: example-grpc-gateway
    gatewayNamespace: default
    listenerName: grpc
  protocol: HTTP
Routes:
- backends:
  - backend:
      port: 9001
      service:
        hostname: grpc-svc-1.default.svc.cluster.local
        namespace: default
    weight: 50
  - backend:
      port: 9002
      service:
        hostname: grpc-svc-2.default.svc.cluster.local
        namespace: default
    weight: 50
  key: default/example-grpc-multi-backend-route.0.grpc
  listenerKey: default/example-grpc-gateway.grpc
  matches:
  - path:
      exact: /example.multi.Service/MultiMethod
  name:
    kind: GRPCRoute
    name: example-grpc-multi-backend-route
    namespace: default
